# monocular_depth_estimation

./: .gitignore  .gitmodules  README.md  mde.ipynb  pyproject.toml  train_classifier.py  train_dpt.py  train_mde.py
LNRegularizer/: LNR.py
config/: classifier.yaml  train_config.yaml
dataloaders/: nyu_data.py
losses/: LMR.py  mde_losses.py
models/: depth_estimator.py  dpt.py  image_classifier.py  transformer.py  utils.py  vit.py
