[project]
name = "MDE"
version = "0.1.0"
description = "Implementation of a deep neural network for monocular depth estimation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dinov3>=0.0.1",
    "ftfy>=6.3.1",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "regex>=2025.9.18",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "submitit>=1.5.3",
    "termcolor>=3.1.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
dinov3 = { path='dinov3' , editable=true }

[tool.pyright]
venvPath="."
venv = ".venv"
include=['.']
pythonVersion="3.13"
